# A-Simple-Chatbot

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 15d0157f2f17_create_users_table.py  162b978e0a4d_create_messages_table.py  36f553b995ee_add_users_and_conversations_table.py  4b36d1608841_add_embedings_table.py  d5f487d7fdb9_accomidate_table_to_allow_adding_chunks.py  debd0bfaf28f_allow_a_message_to_have_multiple_.py
app/: main.py
app/api/: deps.py  health.py
app/api/routes/v1/: conversations.py  messages.py  secure.py
app/core/: settings.py
app/db/: base.py  engine.py
app/models/: conversation.py  message.py  message_embeddings.py  user.py
app/schemas/: conversations.py  health.py  messages.py
app/services/: auth.py  chat.py  message.py  user.py
docs/: arch.md  data-model.md  openapi.yaml
infra/compose/: db.compose.yml
scripts/: export_openapi.py
scripts/cognito/: config_template.json  login.py  signup.py
